# DreamAlpha_project_Navonmesh

./: .gitignore  README.md  design.md  pyproject.toml  requirements.txt
backend/: __init__.py  database.py  main.py  models.py  requirements.txt  seed_data.py  simulator.py
backend/routers/: __init__.py  alerts.py  dispatch.py  inventory.py  sensors.py  weather.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: .gitkeep  client.js
frontend/src/components/: ChamberCard.jsx  Chatbot.jsx  CustomCursor.jsx  NavigationBar.jsx  SensorChart.jsx  UXStates.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/pages/: Alerts.jsx  Dashboard.jsx  Dispatch.jsx  Inventory.jsx  Landing.jsx  Market.jsx  Notifications.jsx  Profile.jsx  Settings.jsx  Weather.jsx
full deployement  plan/full deployement  plan/memory/: PRD.md
ui01/extracted/ui01/test_reports/: iteration_1.json
ui01/ui01/memory/: PRD.md
